<resources>
    <string name="app_name">Справка ГЗРК</string>
    <string name="name_company">Минское областное агентство по государственной регистрации и земельному кадастру</string>
    <string name="email_company">d600@nca.by</string>

    <string name="launcher_activity_label">LauncherActivity</string>
    <string name="main_activity_label">Услуги</string>
    <string name="detail_activity_label">DetailActivity</string>
    <string name="twitter_activity_label">TweetActivity</string>
    <string name="facebook_activity_label">FacebookActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="exit_app_snack">Вы действительно желаете выйти из приложения?</string>
    <string name="no_maps_snack">Приложение GMaps не установлено</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_settings">Настройки</string>

    <string name="drawer_social_nets">Мы в социальных сетях</string>
    <string name="drawer_facebook">Facebook</string>
    <string name="drawer_twitter">Twitter</string>

    <string name="drawer_connect">Связаться с нами</string>
    <string name="drawer_contacts">Контакты</string>
    <string name="drawer_number_inquiry">Справочная</string>
    <string name="drawer_number_reception">Приемная</string>
    <string name="drawer_email">Электронная почта</string>
    <string name="drawer_map">Показать на карте</string>
    <string name="drawer_share">Поделиться</string>
    
    <string name="drawer_additional">Дополнительно</string>
    <string name="drawer_requisites">Реквизиты</string>

    <string name="address_street">Папанина, 7</string>
    <string name="chooser_text_email">Отправить email на d600@nca.by</string>

    <string name="hello_world">Hello, world!</string>
    <string name="tweets_dafault_text">Соединение…</string>

    <string name="dialog_call">Набрать</string>
    <string name="dialog_show">Показать</string>
    <string name="dialog_compose">Написать</string>
    <string name="dialog_close">Закрыть</string>
    <string name="dialog_call_number">Набрать номер</string>

    <string name="snackbar_exit">Выход</string>

</resources>
