<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_settings" />
    </group>

    <item android:title="@string/drawer_social_nets">
        <menu>
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/facebook"
                android:title="@string/drawer_facebook" />
            <item
                android:id="@+id/nav_twitter"
                android:icon="@drawable/twitter"
                android:title="@string/drawer_twitter" />
        </menu>
    </item>

    <item android:title="@string/drawer_connect">
        <menu>
            <item
                android:id="@+id/nav_inquiry"
                android:icon="@drawable/inquiry"
                android:title="@string/drawer_number_inquiry" />
            <item
                android:id="@+id/nav_reception"
                android:icon="@drawable/reception"
                android:title="@string/drawer_number_reception" />
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/map_marker"
                android:title="@string/drawer_map" />
        </menu>
    </item>

</menu>
